--- a/docs/translations/it-IT/it-IT.json
+++ b/docs/translations/it-IT/it-IT.json
@@ -92,6 +92,7 @@
   "alertSignIn": "Login",
   "alertCopy": "Copia",
   "alertClose": "Chiudi",
+  "alertDoNotAsk": "Non chiedere più",
   "appBeta": "ATTENZIONE: versione beta, solo per anteprima",
   "footerOpen": "Apri / Nuovo",
   "footerSyncError": "Errore sincronizzazione",
@@ -211,6 +212,8 @@
   "openError": "errore",
   "openErrorDescription": "C'è stato un errore nell'apertura del file",
   "openErrorFileNotFound": "File non trovato",
+  "openListErrorBody": "Errore durante il caricamento della lista dei file",
+  "openShowAllFiles": "Mostra tutti i file",
   "detAttDownload": "Premi Shift+Click sull'allegato per scaricarlo oppure",
   "detAttDelToRemove": "del per cancellare",
   "detEmpty": "La tua password verrà visualizzata qui",
@@ -314,6 +317,9 @@
   "appNotSupportedError": "Il tuo browser non è supportato.",
   "appTabWarn": "Troppi pannelli",
   "appTabWarnBody": "KeeWeb non può essere utilizzato in due pannelli contemporaneamente, per favore chiudi l'altro pannello.",
+  "appRightsAlert": "Assicurando l'app KeeWeb",
+  "appRightsAlertBody1": "La tua app KeeWeb non è attualmente al sicuro da modifiche non autorizzate. Ti chiediamo il permesso di rendere l'app modificabile solo agli amministratori",
+  "appRightsAlertBody2": "Non vuoi dare l'autorizzazione? Puoi farlo da solo nel terminale",
   "setGenTitle": "Impostazioni generali",
   "setGenUpdate": "Aggiornamento",
   "setGenNewVersion": "Una nuova versione è stata rilasciata e scaricata",
@@ -361,7 +367,6 @@
   "setGenTableView": "Mostra le voci come una tabella",
   "setGenColorfulIcons": "Icone personalizzate colorate",
   "setGenFunction": "Funzionalità",
-  "setGenAutoSync": "Salva e sincronizza automaticamente",
   "setGenRememberKeyFiles": "Ricorda i file chiave",
   "setGenNoRememberKeyFiles": "Non ricordare",
   "setGenRememberKeyFilesData": "Salva nell'archivio interno dell'app",
@@ -377,9 +382,11 @@
   "setGenClearSeconds": "In {} secondi",
   "setGenClearMinute": "In un minuto",
   "setGenMinInstead": "Minimizzare l'app anziché chiuderla",
+  "setGenLock": "Blocco automatico",
   "setGenLockMinimize": "Blocco automatico al minimizzare",
   "setGenLockCopy": "Blocco automatico su copia password",
   "setGenLockAutoType": "Blocco automatico su scrittura automatica",
+  "setGenLockOrSleep": "Quando il computer è bloccato o ibernato",
   "setGenStorage": "Archivio",
   "setGenShowAdvanced": "Mostra impostazioni avanzate",
   "setGenDevTools": "Mostra dev tools",
