--- a/docs/translations/pl/pl.json
+++ b/docs/translations/pl/pl.json
@@ -145,6 +145,7 @@
   "keyChangeTitleExpired": "Wygasł klucz główny",
   "keyChangeMessageExpired": "Klucz główny tej bazy danych wygasł. Proszę wprowadzić nowy klucz",
   "keyChangeRepeatPassword": "Powtórz hasło",
+  "keyEnter": "Wprowadź",
   "iconFavTitle": "Pobierz i użyj ikony ulubionych strony WWW",
   "iconSelCustom": "Wybierz niestandardową ikonę",
   "listEmptyTitle": "Pusto",
@@ -185,7 +186,7 @@
   "openDropHere": "Tutaj upuść pliki",
   "openFailedRead": "Nie można odczytać pliku",
   "openNothingFound": "Nic nie znaleziono",
-  "openNothingFoundBody": "Brak plików do otworzenia.",
+  "openNothingFoundBody": "Nie znaleźliśmy żadnych odpowiednich plików.",
   "openSelectFile": "Wybierz plik",
   "openSelectFileBody": "Wybierz plik, który chcesz otworzyć",
   "openPassFor": "Hasło do",
@@ -231,6 +232,12 @@
   "detHistoryNoTitle": "Brak tytułu",
   "detHistoryCurState": "Obecny stan",
   "detHistoryCurUnsavedState": "Obecny niezapisany stan",
+  "detHistoryRevertAlert": "Powrócić do tego stanu historii?",
+  "detHistoryRevertAlertBody": "Twój obecny stan zostanie zapisany w historii.",
+  "detHistoryDeleteAlert": "Usunąć ten stan historii?",
+  "detHistoryDeleteAlertBody": "Nie będziesz w stanie go przywrócić.",
+  "detHistoryDiscardChangesAlert": "Odrzucić zmiany wprowadzone do wpisu?",
+  "detHistoryDiscardChangesAlertBody": "Niezapisane zmiany zostaną utracone, nie będzie powrotu.",
   "detBackToList": "Wróć do listy",
   "detSetIconColor": "Zmień kolor",
   "detSetIcon": "Zmień ikonę",
@@ -287,6 +294,8 @@
   "detOtpQrErrorBody": "Wybacz, nie możemy odczytać kodu QR. Proszę spróbować ponownie albo skontaktować się z autorami aplikacji wraz z informacjami o błędach.",
   "detOtpQrWrong": "Nieprawidłowy kod QR",
   "detOtpQrWrongBody": "Twój kod QR został pomyślnie przeskanowany, ale nie zawiera danych hasła jednorazowego.",
+  "detLockField": "Zablokuj to pole, więc jego zawartość nie będzie widoczna i dostępna do wyszukiwania. Wyświetlanie treści wymaga jawnego kliknięcia.",
+  "detUnlockField": "Odblokuj to pole, dzięki czemu jego treść będzie natychmiast widoczna i dostępna do wyszukiwania",
   "autoTypeEntryFields": "Pola wpisu",
   "autoTypeModifiers": "Klawisze modyfikujące",
   "autoTypeKeys": "Klawisze",
@@ -299,6 +308,9 @@
   "autoTypeMsgNoWindow": "Nie mogliśmy uzyskać tytułu aktywnego okna. Zacznij pisać, aby wyszukać",
   "autoTypeMsgMatchedByWindow": "Wybierz hasło dla {}",
   "autoTypeNoMatches": "Brak dopasowań",
+  "autoTypeSelectionHint": "Wpisz sekwencję auto-type",
+  "autoTypeSelectionHintAction": "Wpisz tylko hasło",
+  "autoTypeSelectionHintOpt": "Wpisz tylko nazwę użytkownika",
   "appSecWarn": "Niezabezpieczone!",
   "appSecWarnBody1": "Aplikację załadowano z niezabezpieczonym połączeniem. Ktoś może cię obserwować i ukraść twoje hasła. Zdecydowanie zalecamy przerwanie pracy, chyba że wyraźnie zrozumiesz, co robisz.",
   "appSecWarnBody2": "Tak, twoja baza danych jest zaszyfrowana, ale nikt nie może zagwarantować, że aplikacja nie została zmodyfikowana w drodze do ciebie.",
@@ -314,18 +326,18 @@
   "appSaveErrorBodyMul": "Nie udało się autozapisywanie plików:",
   "appSettingsError": "Błąd ładowania aplikacji",
   "appSettingsErrorBody": "Wystąpił błąd podczas ładowania ustawień aplikacji. Proszę sprawdzać dwukrotnie URL aplikacji albo skontaktować się z administratorem.",
-  "appNotSupportedError": "Twoja przeglądarka nie jest obsługiwana.",
+  "appNotSupportedError": "Twoja przeglądarka nie obsługuje niektórych ważnych funkcji, z których korzystamy.",
   "appTabWarn": "Zbyt wiele kart",
   "appTabWarnBody": "KeeWeb nie może być używany w dwóch kartach przeglądarki jednocześnie, proszę zamknąć tę kartę.",
-  "appRightsAlert": "Blokowanie folderu aplikacji",
+  "appRightsAlert": "Blokowanie aplikacji KeeWeb",
   "appRightsAlertBody1": "Twoja aplikacja KeeWeb jest zapisywalna. Prosimy o uprawnienia administratora, aby mógł być zapisywalny tylko dla administratorów.",
-  "appRightsAlertBody2": "Nie chcesz udzielać uprawnień administratora? Możesz to zrobić w Terminalu",
+  "appRightsAlertBody2": "Nie chcesz udzielać uprawnień? Możesz to zrobić w Terminalu",
   "setGenTitle": "Ustawienia ogólne",
   "setGenUpdate": "Aktualizacja",
   "setGenNewVersion": "Nowa wersja aplikacji została wydana i pobrana",
   "setGenReleaseNotes": "Zobacz informacje o wydaniu",
   "setGenReloadToUpdate": "Odśwież, aby zaktualizować",
-  "setGenUpdateManual": "Nowa wersja została wydana. Aplikacja sprawdzi aktualizacje i zainstaluje je automatycznie, ale taka aktualizacja z twojej wersji jest niemożliwa.",
+  "setGenUpdateManual": "Nowa wersja została wydana. Aplikacja sprawdzi aktualizacje i zainstaluje je automatycznie, ale takie uaktualnianie z twojej wersji jest niemożliwe.",
   "setGenDownloadUpdate": "Pobierz aktualizację",
   "setGenUpdateAuto": "Pobierz i zainstaluj automatycznie",
   "setGenUpdateCheck": "Sprawdź, ale nie instaluj",
@@ -367,7 +379,10 @@
   "setGenTableView": "Widok tabeli listy wpisów",
   "setGenColorfulIcons": "Kolorowe niestandardowe ikony na liście",
   "setGenFunction": "Działanie",
-  "setGenAutoSync": "Automatycznie zapisuj i synchronizuj",
+  "setGenAutoSyncOnClose": "Automatycznie zapisuj i synchronizuj przy zamknięciu",
+  "setGenAutoSyncTimer": "Automatycznie zapisuj i synchronizuj okresowo",
+  "setGenAutoSyncTimerOff": "Wyłączone",
+  "setGenAutoSyncTimerInterval": "Co {} minut(y)",
   "setGenRememberKeyFiles": "Zapamiętuj pliki kluczy",
   "setGenNoRememberKeyFiles": "Nie zapamiętuj",
   "setGenRememberKeyFilesData": "Przechowuj w pamięci wewnętrznej aplikacji",
@@ -404,13 +419,17 @@
   "setFileSaveTo": "Zapisz do...",
   "setFileClose": "Zamknij",
   "setFileSync": "Synchronizacja",
+  "setFileSyncVerb": "Synch.",
   "setFileSaveToXml": "XML",
   "setFileLastSync": "Ostatnia synchronizacja",
   "setFileLastSyncUnknown": "nieznana",
   "setFileSyncInProgress": "synchronizacja w toku",
   "setFileSyncError": "Błąd synchronizacji",
   "setFilePass": "Hasło główne",
+  "setFileConfirmPass": "Potwierdź hasło główne",
+  "setFilePassChange": "aby zmienić hasło, wpisz je w polu Potwierdź",
   "setFilePassChanged": "twoje hasło zostało zmienione; zostaw puste pole, aby użyć starego hasła",
+  "setFilePassNotMatch": "hasła nie pasują, wpisz je ponownie",
   "setFileKeyFile": "Plik klucza",
   "setFileSelKeyFile": "Wybierz plik klucza",
   "setFileNames": "Nazwy",
@@ -426,6 +445,8 @@
   "setFileBackupNowWorking": "Pracuję...",
   "setFileBackupError": "Błąd kopii zapasowej",
   "setFileBackupErrorDescription": "Błąd zapisu pliku kopii zapasowej",
+  "setFileBackupErrorIsDir": "Zła ścieżka kopii zapasowej",
+  "setFileBackupErrorIsDirDescription": "Ścieżka kopii zapasowej wydaje się wskazywać na katalog. Zamiast tego podaj nazwę pliku w katalogu.",
   "setFileBackupOnSave": "Za każdym razem, gdy zapiszę plik",
   "setFileBackupDaily": "Codziennie",
   "setFileBackupWeekly": "Tygodniowo",
@@ -535,6 +556,7 @@
   "dropboxLinkApp": "Folderem aplikacji (Apps/KeeWeb)",
   "dropboxLinkFull": "Pełnym Dropboksem albo innym folderem",
   "dropboxLinkCustom": "Własną aplikacją Dropbox",
+  "gdriveSharedWithMe": "Udostępnione dla mnie",
   "webdavSaveMethod": "Metoda zapisu",
   "webdavSaveMove": "Prześlij tymczasowy plik i przenieś",
   "webdavSavePut": "Nadpisz plik KDBX przez PUT",
