--- a/docs/translations/pt-BR/pt-BR.json
+++ b/docs/translations/pt-BR/pt-BR.json
@@ -145,6 +145,7 @@
   "keyChangeTitleExpired": "Chave mestra expirada",
   "keyChangeMessageExpired": "A chave mestra para este banco de dados expirou. Por favor, insira uma nova chave",
   "keyChangeRepeatPassword": "Senha, mais uma vez",
+  "keyEnter": "Entrar",
   "iconFavTitle": "Faça o download e use o favicon do site",
   "iconSelCustom": "Selecionar ícone personalizado",
   "listEmptyTitle": "Vazio",
@@ -287,6 +288,7 @@
   "detOtpQrErrorBody": "Lamentamos, mas não conseguimos ler o código QR, tente novamente ou contacte os autores da aplicação com os detalhes do erro.",
   "detOtpQrWrong": "Código QR errado",
   "detOtpQrWrongBody": "Seu código QR foi digitalizado com êxito, mas não contém dados de senha únicos.",
+  "detLockField": "Bloquear esse arquivo, assim o conteúdo não poderá ser procurado ou estará visível. Para mostrar o conteúdo será necessário obrigatoriamente clicar.",
   "autoTypeEntryFields": "Campos de entrada",
   "autoTypeModifiers": "Modificar teclas",
   "autoTypeKeys": "Chaves",
@@ -367,7 +369,7 @@
   "setGenTableView": "Exibir a lista de inscrições",
   "setGenColorfulIcons": "Icones personalizados usam cor na lista",
   "setGenFunction": "Função",
-  "setGenAutoSync": "Salvar e sincronizar automaticamente",
+  "setGenAutoSyncTimerOff": "Desabilitado",
   "setGenRememberKeyFiles": "Lembrar dos arquivos de chaves",
   "setGenNoRememberKeyFiles": "Não lembrar",
   "setGenRememberKeyFilesData": "Utilizar armazenamento interno",
@@ -411,6 +413,7 @@
   "setFileSyncError": "Erro de sincronização",
   "setFilePass": "Senha",
   "setFilePassChanged": "a senha foi trocada; deixe o campo em branco para usar a senha antiga",
+  "setFilePassNotMatch": "Senha não coincide, por favor digite novamente",
   "setFileKeyFile": "Arquivo chave",
   "setFileSelKeyFile": "Seleciona um arquivo chave",
   "setFileNames": "Nomes",
@@ -426,6 +429,7 @@
   "setFileBackupNowWorking": "Processando...",
   "setFileBackupError": "Erro de backup",
   "setFileBackupErrorDescription": "Erro ao gravar o arquivo de backup",
+  "setFileBackupErrorIsDir": "Caminho do backup inválido",
   "setFileBackupOnSave": "Toda vez eu salvo este arquivo",
   "setFileBackupDaily": "Diario",
   "setFileBackupWeekly": "Semanalmente",
@@ -535,6 +539,7 @@
   "dropboxLinkApp": "Pasta de aplicativo (Apps/KeeWeb)",
   "dropboxLinkFull": "Dropbox completo ou qualquer pasta",
   "dropboxLinkCustom": "Aplicativo Dropbox próprio",
+  "gdriveSharedWithMe": "Compartilhado comigo",
   "webdavSaveMethod": "Salvar método",
   "webdavSaveMove": "Carregar um arquivo temporário e mover",
   "webdavSavePut": "Sobrescreva o arquivo kdbx com PUT",
