--- a/docs/translations/ru-RU/ru-RU.json
+++ b/docs/translations/ru-RU/ru-RU.json
@@ -145,6 +145,7 @@
   "keyChangeTitleExpired": "Мастер-ключ истек",
   "keyChangeMessageExpired": "Действие мастер-ключа для этой базы данных закончилось. Введите новый ключ.",
   "keyChangeRepeatPassword": "Пароль еще раз",
+  "keyEnter": "Вход",
   "iconFavTitle": "Загрузить и использовать иконку сайта",
   "iconSelCustom": "Выбрать свою иконку",
   "listEmptyTitle": "Пусто",
@@ -231,6 +232,12 @@
   "detHistoryNoTitle": "нет названия",
   "detHistoryCurState": "текущее состояние",
   "detHistoryCurUnsavedState": "текущее несохраненное состояние",
+  "detHistoryRevertAlert": "Вернуться к этому состоянию истории?",
+  "detHistoryRevertAlertBody": "Ваше текущее состояние будет сохранено в истории.",
+  "detHistoryDeleteAlert": "Удалить это состояние истории?",
+  "detHistoryDeleteAlertBody": "Вы не сможете его восстановить.",
+  "detHistoryDiscardChangesAlert": "Отменить изменения, внесенные в запись?",
+  "detHistoryDiscardChangesAlertBody": "Несохраненные изменения будут потеряны, обратного пути не будет.",
   "detBackToList": "обратно к списку",
   "detSetIconColor": "Изменить цвет",
   "detSetIcon": "Изменить иконку",
@@ -299,6 +306,8 @@
   "autoTypeMsgNoWindow": "Не удалось получить заголовок активного окна, начните вводить текст для поиска",
   "autoTypeMsgMatchedByWindow": "Выберите пароль для {}",
   "autoTypeNoMatches": "нет совпадений",
+  "autoTypeSelectionHintAction": "Только введите пароль",
+  "autoTypeSelectionHintOpt": "Только введите имя пользователя",
   "appSecWarn": "Не безопасно!",
   "appSecWarnBody1": "Вы загрузили это приложение через незащищенное соединение. Кто-то может наблюдать за вами и украсть ваши пароли. Мы настоятельно рекомендуем вам остановиться, если вы не понимаете, что происходит.",
   "appSecWarnBody2": "Да, база данных зашифрована, но никто не может гарантировать, что приложение не было изменено в пути к вам.",
@@ -367,7 +376,10 @@
   "setGenTableView": "Табличное представление списка записей",
   "setGenColorfulIcons": "Красочные иконки в списке",
   "setGenFunction": "Поведение",
-  "setGenAutoSync": "Автоматическое сохранение и синхронизация",
+  "setGenAutoSyncOnClose": "Автоматически сохранять и синхронизировать при закрытии",
+  "setGenAutoSyncTimer": "Автоматически сохранять и периодически синхронизировать",
+  "setGenAutoSyncTimerOff": "Отключено",
+  "setGenAutoSyncTimerInterval": "Каждые {} минуты",
   "setGenRememberKeyFiles": "Запоминать ключевой файл",
   "setGenNoRememberKeyFiles": "Не запоминать",
   "setGenRememberKeyFilesData": "Хранить во внутреннем хранилище приложения",
@@ -404,13 +416,17 @@
   "setFileSaveTo": "Сохранить как ...",
   "setFileClose": "Закрыть",
   "setFileSync": "Синхронизация",
+  "setFileSyncVerb": "Синхронизировать",
   "setFileSaveToXml": "XML",
   "setFileLastSync": "Последняя синхронизация",
   "setFileLastSyncUnknown": "неизвестно",
   "setFileSyncInProgress": "синхронизация выполняется",
   "setFileSyncError": "Ошибка синхронизации",
   "setFilePass": "Мастер-пароль",
+  "setFileConfirmPass": "Подтвердить мастер-пароль",
+  "setFilePassChange": "чтобы изменить пароль, введите его в поле «Подтвердить»",
   "setFilePassChanged": "пароль был изменен; оставьте поле пустым, чтобы использовать старый пароль",
+  "setFilePassNotMatch": "пароли не совпадают, пожалуйста, введите еще раз",
   "setFileKeyFile": "Ключевой файл",
   "setFileSelKeyFile": "Выберите ключевой файл",
   "setFileNames": "Название",
@@ -426,6 +442,7 @@
   "setFileBackupNowWorking": "Выполняется...",
   "setFileBackupError": "Ошибка резервного копирования",
   "setFileBackupErrorDescription": "Ошибка при записи файла резервной копии",
+  "setFileBackupErrorIsDir": " Путь резервной копии неверный",
   "setFileBackupOnSave": "Каждый раз при сохранении файла",
   "setFileBackupDaily": "Ежедневно",
   "setFileBackupWeekly": "Еженедельно",
@@ -535,6 +552,7 @@
   "dropboxLinkApp": "Папка приложения (Приложения/KeeWeb)",
   "dropboxLinkFull": "Весь Dropbox или любая папка",
   "dropboxLinkCustom": "Собственное приложение Dropbox",
+  "gdriveSharedWithMe": "Поделился со мной",
   "webdavSaveMethod": "Метод сохранения",
   "webdavSaveMove": "Отправка временного файла и перемещение",
   "webdavSavePut": "Перезаписать файл kdbx с помощью PUT",
