--- a/docs/translations/zh-TW/zh-TW.json
+++ b/docs/translations/zh-TW/zh-TW.json
@@ -45,12 +45,12 @@
     "周五",
     "周六"
   ],
-  "retToApp": "返回程序",
+  "retToApp": "返回系統",
   "name": "名稱",
-  "icon": "圖標",
+  "icon": "圖示",
   "title": "標題",
   "password": "密碼",
-  "user": "用戶",
+  "user": "使用者",
   "website": "網站",
   "tags": "標籤",
   "notes": "備註",
@@ -67,7 +67,7 @@
   "shortcuts": "快捷鍵",
   "help": "幫助",
   "settings": "設置",
-  "plugins": "插件",
+  "plugins": "擴充套件",
   "cache": "緩存",
   "file": "檔案",
   "webdav": "WebDAV",
@@ -92,6 +92,7 @@
   "alertSignIn": "登錄",
   "alertCopy": "複製",
   "alertClose": "關閉",
+  "alertDoNotAsk": "不再詢問",
   "appBeta": "警告:測試版本,僅供預覽.",
   "footerOpen": "打開 / 新建",
   "footerSyncError": "同步出錯",
@@ -211,6 +212,8 @@
   "openError": "錯誤",
   "openErrorDescription": "文件開啟錯誤",
   "openErrorFileNotFound": "未找到文件",
+  "openListErrorBody": "開啟檔案資料時發生錯誤",
+  "openShowAllFiles": "顯示所有檔案",
   "detAttDownload": "按住Shift+點擊附件按鈕下載 或",
   "detAttDelToRemove": "刪除並移除",
   "detEmpty": "您的密碼會顯示在這裡",
@@ -314,6 +317,9 @@
   "appNotSupportedError": "不支援你的瀏覽器",
   "appTabWarn": "標籤頁過多",
   "appTabWarnBody": "KeeWeb 不能同時在兩個瀏覽器標籤頁中使用,請關閉這個標籤頁.",
+  "appRightsAlert": "正在鎖定 KeeWeb",
+  "appRightsAlertBody1": "需要 KeeWeb 管理者權限才能寫入目前的修改資料",
+  "appRightsAlertBody2": "不想授權嗎？可以在終端模式手動操作",
   "setGenTitle": "一般設定",
   "setGenUpdate": "更新",
   "setGenNewVersion": "新程式版本已推出並已下載",
@@ -348,7 +354,7 @@
   "setGenThemeSd": "湖水藍",
   "setGenThemeSl": "米白",
   "setGenLocale": "語言",
-  "setGenLocOther": "其他語言以插件提供",
+  "setGenLocOther": "其他語言以擴充套件提供",
   "setGenFontSize": "字體大小",
   "setGenFontSizeNormal": "正常",
   "setGenFontSizeLarge": "大",
@@ -361,7 +367,6 @@
   "setGenTableView": "上下欄檢視",
   "setGenColorfulIcons": "在列表顯示彩色自訂圖示",
   "setGenFunction": "功能",
-  "setGenAutoSync": "自動儲存和同步",
   "setGenRememberKeyFiles": "記住密鑰文件",
   "setGenNoRememberKeyFiles": "不記憶",
   "setGenRememberKeyFilesData": "保存在應用內",
@@ -377,9 +382,11 @@
   "setGenClearSeconds": "{} 秒後",
   "setGenClearMinute": "1 分鐘後",
   "setGenMinInstead": "最小化程式，而不關閉",
+  "setGenLock": "自動鎖定",
   "setGenLockMinimize": "最小化後自動鎖定",
   "setGenLockCopy": "複製密碼後自動鎖定",
   "setGenLockAutoType": "自動輸入後自動鎖定",
+  "setGenLockOrSleep": "當電腦在鎖定或睡眠狀態時",
   "setGenStorage": "儲存",
   "setGenShowAdvanced": "顯示進階設定",
   "setGenDevTools": "顯示開發人員工具",
@@ -466,9 +473,9 @@
   "setShCopyUrlGlobal": "複製網址（程式在背景時）",
   "setShAutoTypeGlobal": "自動輸入（程式在背景時）",
   "setShLock": "鎖定密碼庫",
-  "setPlInstallTitle": "安裝新插件",
-  "setPlInstallDesc": "KeeWeb 插件為 KeeWeb 新增功能，主題和語言包。插件與 KeeWeb 有同等存取權，它們可以讀取和管理你所有密碼。永遠不要安裝你不信任的插件。",
-  "setPlInstallLabel": "插件 URL",
+  "setPlInstallTitle": "安裝新擴充套件",
+  "setPlInstallDesc": "KeeWeb 擴充套件為 KeeWeb 新增功能，主題和語言包。擴充套件與 KeeWeb 有同等存取權，它們可以讀取和管理你所有密碼。千萬不要安裝你不信任的套件。",
+  "setPlInstallLabel": "擴充套件 URL",
   "setPlInstallBtn": "安裝",
   "setPlInstallBtnProgress": "安裝中",
   "setPlUninstallBtn": "移除",
@@ -483,19 +490,19 @@
   "setPlCreatedBy": "創作者為 {}",
   "setPlLoadTime": "需時 {} 載入",
   "setPlLastUpdate": "上次檢查更新",
-  "setPlLoadError": "插件載入錯誤",
-  "setPlGalleryLoading": "插件載入中，請稍候",
-  "setPlGalleryLoadError": "插件載入錯誤",
-  "setPlInstallUrlTitle": "從 URL 新增插件",
+  "setPlLoadError": "擴充套件載入錯誤",
+  "setPlGalleryLoading": "擴充套件載入中，請稍候",
+  "setPlGalleryLoadError": "擴充套件載入錯誤",
+  "setPlInstallUrlTitle": "從 URL 新增擴充套件",
   "setPlInstallUrlDesc": "如果插件不在插件集之中，你可以手動輸入 URL 安裝",
-  "setPlOfficial": "官方 KeeWeb 插件",
-  "setPlSearch": "搜尋插件",
-  "setPlDevelop": "想開發自己的插件？",
+  "setPlOfficial": "官方 KeeWeb 擴充套件",
+  "setPlSearch": "搜尋擴充套件",
+  "setPlDevelop": "想開發自己的擴充套件？",
   "setPlDevelopStart": "由此開始",
   "setPlTranslate": "或者你可以{}",
   "setPlTranslateLink": "翻譯本程式到你的語言",
   "setPlAutoUpdate": "自動更新",
-  "setPlLoadGallery": "載入插件庫",
+  "setPlLoadGallery": "載入擴充套件庫",
   "setAboutTitle": "關於",
   "setAboutBuilt": "本程式使用了這些厲害的工具建設",
   "setAboutLic": "授權",
