--- a/docs/translations/meta.json
+++ b/docs/translations/meta.json
@@ -2,56 +2,56 @@
   "zh-TW": {
     "name": "繁體中文",
     "nameEn": "Chinese Traditional",
-    "count": 493,
-    "version": "1.3.0"
+    "count": 500,
+    "version": "1.4.0"
   },
   "zh-CN": {
     "name": "简体中文",
     "nameEn": "Chinese Simplified",
-    "count": 501,
-    "version": "1.7.0"
+    "count": 500,
+    "version": "1.8.0"
   },
   "pt-PT": {
     "name": "Português",
     "nameEn": "Portuguese",
-    "count": 437,
-    "version": "1.3.0"
+    "count": 436,
+    "version": "1.4.0"
   },
   "ko": {
     "name": "한국어",
     "nameEn": "Korean",
-    "count": 493,
-    "version": "1.7.0"
+    "count": 492,
+    "version": "1.8.0"
   },
   "cs": {
     "name": "Čeština",
     "nameEn": "Czech",
-    "count": 501,
-    "version": "1.5.0"
-  },
-  "tr": {
-    "name": "Türkçe",
-    "nameEn": "Turkish",
-    "count": 377,
-    "version": "1.1.0"
+    "count": 500,
+    "version": "1.6.0"
   },
   "pl": {
     "name": "Polski",
     "nameEn": "Polish",
-    "count": 501,
-    "version": "1.5.0"
+    "count": 523,
+    "version": "1.6.0"
   },
   "hu": {
     "name": "Magyar",
     "nameEn": "Hungarian",
-    "count": 470,
-    "version": "1.6.0"
+    "count": 469,
+    "version": "1.7.0"
+  },
+  "da": {
+    "name": "Dansk",
+    "nameEn": "Danish",
+    "count": 500,
+    "version": "1.0.0"
   },
   "uk": {
     "name": "Українська",
     "nameEn": "Ukrainian",
-    "count": 493,
-    "version": "1.3.0"
+    "count": 492,
+    "version": "1.4.0"
   },
   "et-EE": {
     "name": "Eesti (Eesti)",
@@ -62,55 +62,55 @@
   "pt-BR": {
     "name": "Português (Brasil)",
     "nameEn": "Portuguese (Brazil)",
-    "count": 501,
-    "version": "1.3.0"
+    "count": 506,
+    "version": "1.4.0"
   },
   "no": {
     "name": "Norsk",
     "nameEn": "Norwegian",
-    "count": 501,
-    "version": "1.6.0"
+    "count": 500,
+    "version": "1.7.0"
   },
   "nl-NL": {
     "name": "Nederlands",
     "nameEn": "Dutch",
-    "count": 501,
-    "version": "1.6.0"
+    "count": 500,
+    "version": "1.7.0"
   },
   "fr-FR": {
     "name": "Français",
     "nameEn": "French",
-    "count": 501,
-    "version": "1.8.0"
+    "count": 500,
+    "version": "1.9.0"
   },
   "de-DE": {
     "name": "Deutsch",
     "nameEn": "German",
-    "count": 501,
-    "version": "1.6.0"
+    "count": 500,
+    "version": "1.7.0"
   },
   "it-IT": {
     "name": "Italiano",
     "nameEn": "Italian",
-    "count": 493,
-    "version": "1.5.0"
+    "count": 500,
+    "version": "1.6.0"
   },
   "ru-RU": {
     "name": "Русский",
     "nameEn": "Russian",
-    "count": 501,
-    "version": "1.11.0"
+    "count": 519,
+    "version": "1.12.0"
   },
   "es-ES": {
     "name": "Español",
     "nameEn": "Spanish",
-    "count": 501,
-    "version": "1.7.0"
+    "count": 500,
+    "version": "1.8.0"
   },
   "sv-SE": {
     "name": "Svenska",
     "nameEn": "Swedish",
-    "count": 447,
-    "version": "1.4.0"
+    "count": 446,
+    "version": "1.5.0"
   }
 }
